syntax = "proto3";
package io.harness.eventsframework.schemas.entity;

option java_multiple_files = true;
option go_package = "970_ng_commons";

enum EntityTypeProtoEnum {
  PROJECTS = 0;
  PIPELINES = 1;
  CONNECTORS = 2;
  SECRETS = 3;
  SERVICE = 4;
  ENVIRONMENT = 5;
  INPUT_SETS = 6;
  CV_CONFIG = 7;
  DELEGATES = 8;
  DELEGATE_CONFIGURATIONS = 9;
  CV_VERIFICATION_JOB = 10;
  CV_KUBERNETES_ACTIVITY_SOURCE = 11;
  INTEGRATION_STEPS = 12;
  INTEGRATION_STAGE = 13;
  DEPLOYMENT_STAGE = 14;
  DEPLOYMENT_STEPS = 15;
  PIPELINE_STEPS = 16;
  APPROVAL_STAGE = 17;
  TRIGGERS = 18;
  FEATURE_FLAG_STAGE = 19;
  MONITORED_SERVICE = 20;
  TEMPLATE = 21;
  GIT_REPOSITORIES = 22;
}
